Restful improvement v1